--- a/src/main/webapp/css/list.css
+++ b/src/main/webapp/css/list.css
@@ -37,7 +37,9 @@
 .common-table tbody tr:hover {
     background-color: #f8f9fa;
 }
-
+.common-table a {
+	text-decoration: none;
+}
 .result-count {
     text-align: right;
     margin-bottom: 15px;
@@ -74,9 +76,26 @@
 }
 
 /* 상태 버튼 공통 스타일 */
-.status-btn {
+.list-btn-edit {
     padding: 6px 16px;
-    background-color: #5c5c5c;
+    background-color: white;
+    color: #333;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 13px;
+    font-weight: 600;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.list-btn-edit:hover {
+    background-color: #f8f9fa;
+}
+
+.list-btn-delete {
+    padding: 6px 16px;
+    background-color: #dc3545;
     color: white;
     border: none;
     border-radius: 4px;
@@ -87,18 +106,10 @@
     display: inline-block;
 }
 
-.status-btn:hover {
-    background-color: #4a4a4a;
-    color: white;
+.list-btn-delete:hover {
+    background-color: #c82333;
 }
 
-.status-btn.active {
-    background-color: #28a745;
-}
-
-.status-btn.active:hover {
-    background-color: #218838;
-}
 .pagination {
 	display: flex;
 	justify-content: center;
